Updated the social media buttons.

--- a/css/site.css
+++ b/css/site.css
@@ -55,6 +55,17 @@ h6 {
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
 }
 
+.btn{
+	background: transparent;
+	color: #F2F2F2;
+    border: 2px solid #F2F2F2;
+	-webkit-transition: background .2s ease-in-out, border .2s ease-in-out;
+	-moz-transition: background .2s ease-in-out, border .2s ease-in-out;
+	-ms-transition: background .2s ease-in-out, border .2s ease-in-out;
+	-o-transition: background .2s ease-in-out, border .2s ease-in-out;
+	transition: background .2s ease-in-out, border .2s ease-in-out;
+}
+
 @media(max-width:767px) {
     .intro-message {
         padding-bottom: 15%;
