--- a/css/site.css
+++ b/css/site.css
@@ -25,7 +25,7 @@ h6 {
 }
 
 .intro-header {
-    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
@@ -64,6 +64,10 @@ h6 {
 	-ms-transition: background .2s ease-in-out, border .2s ease-in-out;
 	-o-transition: background .2s ease-in-out, border .2s ease-in-out;
 	transition: background .2s ease-in-out, border .2s ease-in-out;
+}
+
+.btn:hover{
+    border-color: #E6E6E6;
 }
 
 @media(max-width:767px) {
