--- a/css/site.css
+++ b/css/site.css
@@ -144,6 +144,12 @@ h6 {
     margin-top: 0;
 }
 
+.checkmark-lg{
+    font-size: 1.5em;
+}
+.icon-padding-right{
+    padding-right: 25px;
+}
 @media(max-width:1199px) {
     ul.banner-social-buttons {
         float: left;
