--- a/css/site.css
+++ b/css/site.css
@@ -189,3 +189,11 @@ p.copyright {
     top:50%;
     margin-top:-100px;
 }
+
+.portfolio-website-image{
+    height: 200px;
+}
+
+.portfolio-website-title{
+    height: 52px !important;
+}
